CH5C-9779 - fix ellipsis when text is truncated

--- a/src/ch5-text/scss/_text-default.scss
+++ b/src/ch5-text/scss/_text-default.scss
@@ -48,6 +48,7 @@ ch5-text {
       -webkit-box-orient: vertical;
       -webkit-line-clamp: 3; // start showing ellipsis when 3rd line is reached
       white-space: pre-wrap !important; // let the text wrap preserving spaces 
+      word-break: break-all;
     }
 
     /// Applied when multilineSupport='false'
